--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 /* Start Global */
+html {
+    height: 100vh;
+}
 
 * {
     box-sizing: border-box;
@@ -216,7 +219,7 @@ body {
     }
     .main .content h2 {
         font-size: 2.5rem;
-        margin-top: 0;
+        margin: 0;
         letter-spacing: 2px;
     }
     
@@ -293,8 +296,6 @@ body {
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 50%;
         box-shadow: 0px 0px 15px #fff, 0px 0px 15px #fff;
-        
-        /*box-shadow: 15px 0px 15px #fff, -15px 0px 15px #fff;*/
     }
     
     .main .content .downlops .down-full .text {
@@ -332,16 +333,13 @@ body {
         width:300px
     }
     
-    
-
     /* End Main Content */
 
     /* Start Social*/
     .social {
         position: absolute;
-        bottom: 35px;
+        bottom: 50px;
         width: 50px;
-        /*font-size: 50px;*/
         left: 3%;
     }
     .social:hover {
@@ -358,14 +356,111 @@ body {
         color: #ccc;
     }
     .social .icon .social-icon {
-        height: 0px;
+       height: 0px;
         overflow: hidden;
         transition: all 0.3s ease-in-out;
     }
+    
     .social:hover .icon .social-icon {
         height: 90px;
     }
     
     /* End Social*/
 
+    /*media query*/
+    
+    @media(max-width:880px) {
+        .main .content p {
+            font-size: 1rem;
+        }
+    }
+    
+    @media(max-width:768px) {
+        .menu .links .container {
+            grid-template-columns: 40%;
+        }
+        .main .content {
+            align-items: center;
+            text-align: center;
+        }
+        .main .content h1 {
+            margin-top: 3rem;
+        }
+        .main .content p {
+            font-size: 1.3rem;
+        }
+        .main .image {
+            display: none;
+        }
+        .social {
+            bottom: 25px;
+        }
+    }
+
+    @media(max-width:567px) {
+        .menu .links .container {
+            grid-template-columns: 50%;
+        }
+        .main .content h1 {
+            font-size: 3rem;
+            margin-top: 5rem;
+        }
+        .main .content h2 {
+            font-size: 1.5rem;
+        }
+        .main .content p {
+            font-size: 1rem;
+        }
+        .main .content .downlops .down-demo .text > span {
+            font-size: 1rem;
+        }
+        .main .content .downlops .down-demo .text .down-type {
+            font-size: 1rem;
+        }
+        .main .content .downlops .down-demo .text .down-type span {
+            font-size: 0.5rem;
+        }
+        [class^="flaticon-download"]:before, [class*=" flaticon-download"]:before, [class^="flaticon-download"]:after, [class*=" flaticon-download"]:after {
+            font-size: 25px;
+        }
+        
+        .social {
+            position: relative;
+            width: 100%;
+            left: inherit;
+            bottom: inherit;
+        }
+        .social .icon .flaticon-up-arrow, .social .icon .flaticon-down-arrow {
+            display: none;
+        }
+        .social .icon .social-icon {
+            display: flex;
+            justify-content: center;
+        }
+        .social .icon i:before, .social .icon i:after {
+            margin-left: 0px;
+            padding: 1rem;
+        }
+        .social .icon .social-icon {
+            height: inherit;
+         }
+         
+         .social:hover .icon .social-icon {
+             height: inherit;
+         }
+    }
+    @media(max-width:400px) {
+        .menu .links .container > ul {
+            border-right:none;
+            line-height: 2;
+        }
+        .menu .links .container ul li ul {
+            position: relative;
+            left: 125%;
+        }
+        .menu .links ul li:not(:first-child) {
+            padding-top: 0.5rem;
+        }
+        
+    }
 /* End Home */
